--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+loader.html
+assets/css/loader.css
+assets/js/loader.js
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
